--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Ignore all
+*
+# Unignore all with extensions
+!*.*
+# Unignore all dirs
+!*/
+### Above combination will ignore all files without extension ###
+
+# Transcypt output
+*__javascript__
+
+# Python objects
+*__pycache__
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -10,3 +24,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Edit swap and backup files
+*.swp
+*.bak
